--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-bootstrap-icons": "^1.7.2",
+    "react-bootstrap-typeahead": "^6.0.0-alpha.9",
     "react-dom": "^17.0.2",
     "react-multi-carousel": "^2.8.0",
     "react-scripts": "5.0.0",
