--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
     "mdb-react-ui-kit": "^2.4.0",
@@ -18,9 +19,11 @@
     "react-bootstrap-icons": "^1.7.2",
     "react-bootstrap-typeahead": "^6.0.0-alpha.9",
     "react-dom": "^17.0.2",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-multi-carousel": "^2.8.0",
     "react-scripts": "5.0.0",
     "sass": "^1.49.9",
+    "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
