--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
+    "json-server": "^0.17.0",
     "mdb-react-ui-kit": "^2.4.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
@@ -20,6 +21,7 @@
     "react-bootstrap-typeahead": "^6.0.0-alpha.9",
     "react-dom": "^17.0.2",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-infinite-scroller": "^1.2.5",
     "react-multi-carousel": "^2.8.0",
     "react-scripts": "5.0.0",
     "sass": "^1.49.9",
